--- a/package.json
+++ b/package.json
@@ -1,8 +1,28 @@
 {
-  "name": "chronometer",
-  "version": "0.1.0",
-  "private": true,
+  "name": "styled-progressbars",
+  "keywords": [
+    "react",
+    "styled components",
+    "progress bar",
+    "radial progress",
+    "ui"
+  ],
+  "version": "0.1.1",
+  "private": false,
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KharleannCF/LoadingBars"
+  },
   "dependencies": {
+    "@babel/cli": "^7.16.7",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.16.7",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -15,7 +35,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "babel src/lib --out-dir dist --copy-files",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -36,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.7"
   }
 }
