--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "radial progress",
     "ui"
   ],
-  "version": "0.1.4",
+  "version": "0.1.3",
   "private": false,
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -21,7 +21,11 @@
   },
   "dependencies": {
     "prop-types": "^15.8.0",
-    "styled-components": "^5.3.3"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
